# ox_api

./: ORDER_USAGE.md  README.md  compile_order.bat  execute_plan.md  order_stock.cpp  origin_readme.md  plan.md  test_login.py  xuntou_cpp_python_plan.md  登录说明.md  登录错误记录.md
cpp_service/: .gitignore  CMakeLists.txt  README.md
cpp_service/config/: service_config.json
cpp_service/include/: config.h  error_handler.h  http_server.h  logger.h
cpp_service/src/: config.cpp  error_handler.cpp  http_server.cpp  logger.cpp  main.cpp  test_dependencies.cpp
cpp_service/tests/: test_2_2_acceptance.cpp  test_config.cpp  test_error_handler.cpp  test_http_server.cpp  test_logger.cpp
demo/: demo.sln  demo.vcxproj  demo.vcxproj.filters  getopt.hpp  inireader.h  main.cpp  start.bat
demo/config/: config.ini
doc/: API使用说明.docx
docs/: 登录测试说明.md  登录说明.md  验收报告_1.2.md
include/: OXTradeApi.h  OXTradeApiConst.h  OXTradeApiStruct.h  OXTradeApiType.h
lib/: GuosenOXAPI.lib
python/: .flake8  .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  README.md  RELEASE.md  TEST_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
python/docs/: API_REFERENCE.md  COVERAGE_REPORT.md  COVERAGE_REPORT_TASK_1_2.md  COVERAGE_REPORT_TASK_2_1.md  COVERAGE_REPORT_TASK_2_2.md  COVERAGE_REPORT_TASK_2_3.md  COVERAGE_REPORT_TASK_3_1.md  COVERAGE_REPORT_TASK_3_2.md  COVERAGE_REPORT_TASK_3_3.md  FAQ.md  INTEGRATION_TEST_REPORT.md  QUICKSTART.md  STAGE1_ACCEPTANCE_REPORT.md  STAGE2_ACCEPTANCE_REPORT.md  STAGE3_ACCEPTANCE_REPORT.md  USAGE_EXAMPLES.md  coverage.json  coverage_api.json  coverage_batch_order.json  coverage_cancel.json  coverage_cancel_updated.json  coverage_full_report.txt  coverage_order.json  coverage_report.txt  coverage_spi.json  coverage_task_2_1.json  coverage_task_2_1_final.json  coverage_task_2_1_updated.json  coverage_terminal.txt
python/examples/: QUICK_START_REAL_TRADING.md  README.md  REAL_TRADING_GUIDE.md  order_example.py  query_example.py  real_trading.py  simple_real_order.py  trading_example.py  真实下单使用说明.md
python/stock_ox/: __init__.py  api.py  constants.py  dll_loader.py  exceptions.py  spi.py  structs.py  types.py  utils.py
python/tests/: test_api.py  test_basic.py  test_batch_order.py  test_cancel.py  test_dll_loader.py  test_integration.py  test_order.py  test_spi.py  test_stage1_acceptance.py  test_stage2_acceptance.py  test_stage3_acceptance.py  test_structs.py  test_task_2_1.py
